# bookmark-brain

./: .gitignore  README.md  RESUME.md  pyproject.toml
bb/: cli.py  config.py
bb/ingestion/: fieldtheory.py  manual.py  scraper.py
bb/maintenance/: digest.py  freshness.py  health_check.py
bb/processing/: block_generator.py  gemma.py  validator.py
bb/query/: recommender.py  retriever.py
bb/storage/: block_store.py  index_manifest.py  search_index.py
blocks/: _index.json
blocks/articles/: 172ee.md  1d971.md  24912.md  3043f.md  72450.md  7433d.md  938ac.md  a2337.md  ae331.md  d92b5.md  de2cf.md
blocks/methods/: 004b9.md  23bbd.md  54b83.md  67d5d.md  8392e.md  972cd.md  a86c1.md  af5dd.md  e18f0.md  e5abb.md  f9df0.md
blocks/other/: 12c73.md
blocks/resources/: 138db.md  31104.md  5683d.md  64ae4.md  73d11.md  b789e.md  c246e.md  e632d.md  f0ff2.md
blocks/tools/: 20e01.md  23111.md  255d1.md  30f00.md  40c2c.md  4d90e.md  57bc1.md  587d8.md  5e713.md  611ff.md  6abee.md  72596.md  a6020.md  c929c.md  d42a2.md  d7716.md  f03f3.md
scripts/: start-llm.sh
